--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "sharp": "^0.33.3",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0"
   },
